enabled aves echo passt (echopasst) checkpoint by burooj ghani and successfully now loading xeno-canto chckpnt for animal2vec

--- a/bacpipe/config.yaml
+++ b/bacpipe/config.yaml
@@ -4,7 +4,7 @@
 # define paths for your data, these are the standard directories, if you 
 # used the file condenser. If you do not have annotated data, and all of your
 # sound files are in one directory, change accordingly
-audio_dir :       "bacpipe/test_files/audio/humpbacks"
+audio_dir :       "bacpipe/test_files/audio/audio_test_files"
 # audio_dir :       "/media/vincent/Extreme SSD/MA/20221019-Benoit/transfer_1780104_files_cfc5b86f/SABA01_201511_201604_SN275/resampled_2kHz/wav"
 
 # fixed path, embeddings will be stored here, DO NOT CHANGE
@@ -16,7 +16,7 @@ umap_parent_dir :   "bacpipe/test_files/umap_embeds"
 sr : 2000
 
 # embedding model name
-embedding_model: 'insect66'
+embedding_model: 'animal2vec'
 
 # length limitation for condensed file
 segs_lim:             1500
