--- a/bacpipe/config.yaml
+++ b/bacpipe/config.yaml
@@ -13,7 +13,7 @@ umap_parent_dir :   "bacpipe/test_files/umap_embeds"
 
 
 # embedding model name
-embedding_model: 'vggish'
+embedding_model: 'whaleperch'
 
 # supported formats of audio files
 audio_suffixes: ['.wav', '.WAV', '.aif', '.mp3']
