--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@
 # define paths for your data, these are the standard directories, if you 
 # used the file condenser. If you do not have annotated data, and all of your
 # sound files are in one directory, change accordingly
-audio_dir :       "bacpipe/evaluation/datasets/audio_test_data"
+audio_dir :       "bacpipe/evaluation/datasets/audio_test_files"
 
 
 
@@ -33,3 +33,6 @@ models : [
 
 # embedding model name
 embedding_model: ["aves"]
+
+# dimensionality reduction model name
+dim_reduction_model: None
