--- a/config.yaml
+++ b/config.yaml
@@ -18,7 +18,7 @@ models : [
     "biolingual",
     "birdaves",
     "birdnet",
-    "echopasst",
+    "avesecho_passt",
     "hbdet",
     "insect66",
     "mix2",
