--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,15 @@
-## MAIN VARS ##
+#################### CONFIGURATION FILE ####################
+# This file contains the configuration for the audio data path,
+# the embedding model, and the dimensionality reduction model.
+#
+# The embedding model must be a list either of one or multiple models.
+# 
+# The dimensionality reduction model must be just one of the supported models.
+
 
 # PATHS:
-# define paths for your data, these are the standard directories, if you 
-# used the file condenser. If you do not have annotated data, and all of your
-# sound files are in one directory, change accordingly
+# define paths for your audio data
 audio_dir :       "bacpipe/evaluation/datasets/audio_test_files"
-
-
-
 
 # CHOOSE FROM MODELS
 models : [
