--- a/bacpipe/config.yaml
+++ b/bacpipe/config.yaml
@@ -5,6 +5,11 @@
 embed_parent_dir :   "bacpipe/evaluation/embeddings"
 dim_reduc_parent_dir :   "bacpipe/evaluation/dim_reduced_embeddings"
 
+# fixed paths for tasks:
+task_config_files : "bacpipe/evaluation/tasks"
+task_results_dir : "bacpipe/evaluation/task_results"
+
+
 # To avoid creating embeddings when configurations are still being tested, this is set to True. 
 # Set to False if you want to keep embeddings even if the process is interrupted.
 rm_embedding_on_keyboard_interrupt: True
