#15 add insect459 model, fix bugs, expand readme file, fix avesecho checkpoint name

--- a/config.yaml
+++ b/config.yaml
@@ -9,8 +9,7 @@
 
 # PATHS:
 # define paths for your audio data
-# audio_dir :       "bacpipe/evaluation/datasets/audio_test_files"
-audio_dir :       "/home/siriussound/Data/id_task_data"
+audio_dir :       "bacpipe/evaluation/datasets/audio_test_files"
 
 # CHOOSE FROM MODELS
 available_models : [
@@ -35,7 +34,9 @@ available_models : [
 
 
 # embedding model name
-embedding_model: ["birdnet"]
+embedding_model: [
+  "birdnet"
+]
 
 # dimensionality reduction model name.
 supported_models: [
@@ -49,5 +50,7 @@ dim_reduction_model: None
 # specify the evaluation task to be performed
 supported_evaluation_tasks: [
   "ID",
+  "species",
+  "taxon"
 ]
-evaluation_task: "ID"
+evaluation_task: None
