--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,12 @@ config.yaml
 
 # ignore datasets, embeddings, and task results
 bacpipe/evaluation/datasets/*
+!bacpipe/evaluation/datasets/audio_test_files
+!bacpipe/evaluation/datasets/embedding_test_files
 bacpipe/evaluation/embeddings/*
 bacpipe/evaluation/dim_reduced_embeddings/*
-bacpipe/evaluation/task_results/*
+bacpipe/evaluation/task_results/metrics/*
+bacpipe/evaluation/task_results/plots/*
 
 # track all Readme files, including the ones in subdirectories
 !**/README.md
