#14 finalize linear probe testing and add to readme texts.

--- a/bacpipe/evaluation/tasks/ID/config.json
+++ b/bacpipe/evaluation/tasks/ID/config.json
@@ -5,73 +5,5 @@
     "num_epochs": 10,
     "dataset_csv_path": "bacpipe/evaluation/datasets/benchmark/dataset_9species.csv",
     "Num_classes": 66,
-    "label_type": "hierarchical_labels",
-    "label_to_index": {
-        "mammal_hyrax_18": 0,
-        "bird_chiffchaff_PC1110": 1,
-        "bird_pipit_0911": 2,
-        "bird_chiffchaff_F91954": 3,
-        "bird_chiffchaff_PC1113": 4,
-        "bird_pipit_1211": 5,
-        "mammal_hyena_cc366a": 6,
-        "bird_chiffchaff_PC1111": 7,
-        "bird_chiffchaff_PC1105": 8,
-        "mammal_hyrax_1": 9,
-        "mammal_hyrax_4": 10,
-        "bird_littleowl_229": 11,
-        "bird_chiffchaff_PC1107": 12,
-        "bird_chiffchaff_PC1102": 13,
-        "mammal_hyrax_17": 14,
-        "bird_chiffchaff_F91913": 15,
-        "mammal_hyrax_2": 16,
-        "bird_littleowl_DUB": 17,
-        "bird_eagleowl_MENCI2": 18,
-        "mammal_hyrax_10": 19,
-        "bird_pipit_0712": 20,
-        "bird_chiffchaff_PC1108": 21,
-        "mammal_greywolf_354": 22,
-        "bird_littleowl_RADBF": 23,
-        "bird_eagleowl_FAME": 24,
-        "bird_littleowl_RADK": 25,
-        "bird_littleowl_RAC": 26,
-        "bird_eagleowl_MENCI1": 27,
-        "mammal_hyrax_12": 28,
-        "mammal_hyrax_19": 29,
-        "bird_pipit_1011": 30,
-        "bird_littleowl_CER": 31,
-        "mammal_hyrax_16": 32,
-        "bird_chiffchaff_F91903": 33,
-        "bird_pipit_1611": 34,
-        "bird_littleowl_193": 35,
-        "bird_chiffchaff_PC1109": 36,
-        "bird_littleowl_VEV": 37,
-        "bird_chiffchaff_PC1106": 38,
-        "mammal_hyrax_7": 39,
-        "bird_littleowl_108": 40,
-        "bird_chiffchaff_PC1104": 41,
-        "bird_littleowl_PAL": 42,
-        "mammal_hyrax_3": 43,
-        "bird_chiffchaff_F91916": 44,
-        "bird_chiffchaff_F72726": 45,
-        "mammal_greywolf_010": 46,
-        "bird_eagleowl_MENCI3": 47,
-        "bird_littleowl_KME": 48,
-        "bird_pipit_1511": 49,
-        "mammal_hyrax_9": 50,
-        "bird_pipit_0312": 51,
-        "bird_chiffchaff_PC1101": 52,
-        "bird_chiffchaff_F91915": 53,
-        "mammal_hyrax_6": 54,
-        "mammal_hyena_cc352b": 55,
-        "mammal_hyrax_11": 56,
-        "mammal_hyrax_13": 57,
-        "mammal_hyrax_5": 58,
-        "bird_littleowl_7": 59,
-        "bird_littleowl_BRE": 60,
-        "mammal_greywolf_028": 61,
-        "bird_chiffchaff_F91959": 62,
-        "bird_chiffchaff_PC1103": 63,
-        "bird_chiffchaff_F91907": 64,
-        "mammal_greywolf_063": 65
-    }
+    "label_type": "hierarchical_labels"
 }
