--- a/bacpipe/evaluation/tasks/taxon/config.json
+++ b/bacpipe/evaluation/tasks/taxon/config.json
@@ -1,13 +1,9 @@
 {
-    "task_name": "Taxon",
+    "task_name": "taxon",
     "learning_rate": 0.001,
     "batch_size": 64,
     "num_epochs": 10,
     "dataset_csv_path": "bacpipe/evaluation/datasets/benchmark/dataset_9species.csv",
     "Num_classes": 2,
-    "label_type": "taxon",
-    "label_to_index": {
-        "bird": 0,
-        "mammal": 1
-    }
+    "label_type": "taxon"
 }
