--- a/bacpipe/evaluation/tasks/species/config copy.json
+++ b/bacpipe/evaluation/tasks/species/config copy.json
@@ -1,7 +1,7 @@
 {
     "task_name": "species",
-    "dataset_csv_path": "../bacpipe/exploration/neotropic_dawn_chorus/task_annotations.csv",
-    "Num_classes": 11,
+    "dataset_csv_path": "bacpipe/evaluation/datasets/benchmark/dataset_9species.csv",
+    "Num_classes": 7,
     "learning_rate": 0.001,
     "batch_size": 64,
     "num_epochs": 10,
