--- a/bacpipe/settings.yaml
+++ b/bacpipe/settings.yaml
@@ -11,6 +11,9 @@ dim_reduc_parent_dir :   "dim_reduced_embeddings"
 task_results_dir : "task_results"
 task_config_files : "bacpipe/embedding_evaluation/classification/tasks"
 
+overwrite: False
+
+remove_noise: True
 
 # To avoid creating embeddings when configurations are still being tested, this is set to True. 
 # Set to False if you want to keep embeddings even if the process is interrupted.
@@ -24,4 +27,61 @@ audio_suffixes: ['.wav', '.WAV', '.aif', '.mp3', '.flac']
 # specify your device ['cpu', 'cuda', ...]
 device: 'cpu'
 
-use_parent_dir_as_label: False
+default_label_keys: [
+  "time_of_day",
+  "day_of_year",
+  "continuous_timestamp",
+  "parent_directory",
+  "audio_file_name"
+  ]
+
+
+######################################################
+###############   EVALUATION SETTINGS ################
+######################################################
+
+## CLASSIFICATION SETTINGS ##
+
+class_configs:
+  config_1:
+    bool: True
+    name: "linear"
+    learning_rate: 0.001
+    batch_size: 64
+    num_epochs: 10
+    dataset_csv_path: "classification_dataframe.csv"
+    shuffle: False
+  config_2:
+    bool: True
+    name: "knn"
+    n_neighbors: 15
+    dataset_csv_path: "classification_dataframe.csv"
+
+
+## CLUSTERING SETTINGS ##
+
+clust_configs: 
+  config_1: 
+    bool: True
+    name: "kmeans"
+    # number of clusters is set to a default value of 18
+    # this is the default value can be adjusted as needed
+    params:
+      n_clusters: 18
+  config_2:
+    bool: False
+    name: "hdbscan"
+    params:
+      min_cluster_size: 10
+      min_samples: 5
+      metric: "euclidean"
+    
+
+## DISTANCE EVALUATION ## 
+
+distance_configs:
+  config_1: 
+    bool: False
+    name: "euclidean"
+    method: "intra_vs_inter"
+
