--- a/bacpipe/path_settings.yaml
+++ b/bacpipe/path_settings.yaml
@@ -15,8 +15,8 @@ task_results_dir : "bacpipe/evaluation/task_results"
 rm_embedding_on_keyboard_interrupt: True
 
 # supported formats of audio files
-audio_suffixes: ['.wav', '.WAV', '.aif', '.mp3']
+audio_suffixes: ['.wav', '.WAV', '.aif', '.mp3', '.flac']
 
 # specify your device ['cpu', 'cuda', ...]
-device: 'cpu'
+device: 'cuda'
 
