--- a/bacpipe/settings.yaml
+++ b/bacpipe/settings.yaml
@@ -1,35 +1,48 @@
-## MAIN VARS ##
-# audio_dir :       "/media/vincent/Extreme SSD/MA/20221019-Benoit/transfer_1780104_files_cfc5b86f/SABA01_201511_201604_SN275/resampled_2kHz/wav"
+######################################################
+#########   EMBEDDING GENERATION SETTINGS ############
+######################################################
 
-# fixed path, embeddings will be stored here, advised not to change
-# because this is also where bacpipe will look for existing embeddings
-main_results_dir :   "results/by_dataset"
-embed_parent_dir :   "embeddings"
-dim_reduc_parent_dir :   "dim_reduced_embeddings"
+# specify your device, if unsure use 'cpu', if you are working on a 
+# gpu computer use 'cuda'
+device: 'cpu'
 
-# fixed paths for tasks:
-evaluations_dir : "evaluations"
-task_config_files : "bacpipe/embedding_evaluation/classification/tasks"
+# fixed path, model checkpoints are/should be stored here
+# this is also where bacpipe will look for existing checkpoints
+model_base_path: "bacpipe/model_checkpoints"
 
-overwrite: False
+# batch size for embedding generation, modify if you have memory issues
+# or if you want to speed up the process and have enough memory available
+global_batch_size: 16
 
-remove_noise: True
 
-# specify if you want to visualize the embedding evaluations
-dashboard: True
+# supported formats of audio files
+audio_suffixes: ['.wav', '.WAV', '.aif', '.mp3', '.MP3', '.flac']
+
 
 # To avoid creating embeddings when configurations are still being tested, this is set to True. 
 # Set to False if you want to keep embeddings even if the process is interrupted.
 rm_embedding_on_keyboard_interrupt: True
 
-use_reduced_dim_embeds_for_tasks: True
 
-# supported formats of audio files
-audio_suffixes: ['.wav', '.WAV', '.aif', '.mp3', '.flac']
+######################################################
+###############   EVALUATION SETTINGS ################
+######################################################
 
-# specify your device ['cpu', 'cuda', ...]
-device: 'cpu'
+# specify if you want to remove the segments that do not have annotations
+# this is useful if you have a very large dataset and only a small part of 
+# it is annotated
+remove_noise: True
 
+
+# specify if you want to overwrite the existing evaluation results
+# this is useful if you want to re-run the evaluation with different parameters
+overwrite: False
+
+
+# specify if you want to visualize the embedding evaluations
+dashboard: True
+
+# kinds of default labels that are created for the embeddings
 default_label_keys: [
   "time_of_day",
   "day_of_year",
@@ -38,10 +51,6 @@ default_label_keys: [
   "audio_file_name"
   ]
 
-
-######################################################
-###############   EVALUATION SETTINGS ################
-######################################################
 
 ## CLASSIFICATION SETTINGS ##
 
@@ -88,3 +97,18 @@ distance_configs:
     name: "euclidean"
     method: "intra_vs_inter"
 
+
+
+######################################################
+##################   PATH SETTINGS ###################
+######################################################
+
+# fixed path, embeddings will be stored here, advised not to change
+# because this is also where bacpipe will look for existing embeddings
+main_results_dir :   "results/by_dataset"
+embed_parent_dir :   "embeddings"
+dim_reduc_parent_dir :   "dim_reduced_embeddings"
+
+# fixed paths for tasks:
+evaluations_dir : "evaluations"
+task_config_files : "bacpipe/embedding_evaluation/classification/tasks"
