--- a/bacpipe/settings.yaml
+++ b/bacpipe/settings.yaml
@@ -28,25 +28,11 @@ rm_embedding_on_keyboard_interrupt: True
 ###############   EVALUATION SETTINGS ################
 ######################################################
 
-# specify if you want to remove the segments that do not have annotations
-# this is useful if you have a very large dataset and only a small part of 
-# it is annotated
-remove_noise: True
-
-
-# specify if you want to overwrite the existing evaluation results
-# this is useful if you want to re-run the evaluation with different parameters
-overwrite: True
-
-
-# specify if you want to visualize the embedding evaluations
-dashboard: True
-
 # For evaluation using classification it is necessary to have a minimum number 
 # of embeddings for each label. The remaining embeddings will be marked as noise.
 # Change this value at will, but be aware that classification might fail if it's too low. 
 # Default = 150.
-min_label_occurances: 150
+min_label_occurances: 50
 
 # If you want to visualize the embeddings by ground truth with no minimum
 # number of occurances, set this to False.
@@ -120,10 +106,7 @@ distance_configs:
 
 # fixed path, embeddings will be stored here, advised not to change
 # because this is also where bacpipe will look for existing embeddings
-main_results_dir :   "results/by_dataset"
-embed_parent_dir :   "embeddings"
-dim_reduc_parent_dir :   "dim_reduced_embeddings"
-
-# fixed paths for tasks:
-evaluations_dir : "evaluations"
-task_config_files : "bacpipe/embedding_evaluation/classification/tasks"
+main_results_dir :      "results"
+embed_parent_dir :      "embeddings"
+dim_reduc_parent_dir :  "dim_reduced_embeddings"
+evaluations_dir :       "evaluations"
