--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,14 @@ astunparse==1.6.3
 attrs==24.2.0
 audioread==3.0.1
 bitarray==2.9.2
+black==24.10.0
+bleach==6.2.0
 blinker==1.8.2
+bokeh==3.6.3
 cachetools==5.3.3
 certifi==2024.6.2
 cffi==1.16.0
+cfgv==3.4.0
 charset-normalizer==3.3.2
 chex==0.1.87
 click==8.1.7
@@ -23,6 +27,7 @@ cycler==0.12.1
 Cython==3.0.11
 decorator==5.1.1
 dill==0.3.1.1
+distlib==0.3.9
 dnspython==2.6.1
 docopt==0.6.2
 einops==0.8.0
@@ -51,6 +56,7 @@ httpx==0.27.0
 huggingface-hub==0.25.1
 humanize==4.11.0
 hydra-core==1.0.7
+identify==2.6.2
 idna==3.7
 importlib_metadata==7.1.0
 importlib_resources==6.4.5
@@ -68,20 +74,26 @@ kiwisolver==1.4.5
 lazy_loader==0.4
 libclang==18.1.1
 librosa==0.10.2.post1
+linkify-it-py==2.0.3
 llvmlite==0.43.0
+locket==1.0.0
 lxml==5.3.0
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.0
+mdit-py-plugins==0.4.2
 mdurl==0.1.2
 ml-dtypes==0.3.2
 ml_collections==0.1.1
 mpmath==1.3.0
 msgpack==1.0.8
+multipledispatch==1.0.0
+mypy-extensions==1.0.0
 namex==0.0.8
 nest-asyncio==1.6.0
 networkx==3.3
+nodeenv==1.9.1
 numba==0.60.0
 numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
@@ -106,11 +118,16 @@ orbax-checkpoint==0.6.4
 orjson==3.10.7
 packaging==24.1
 pandas==2.2.3
+panel==1.6.2
+param==2.2.0
+partd==1.4.2
+pathspec==0.12.1
 pillow==10.3.0
 platformdirs==4.2.2
 pluggy==1.5.0
 pooch==1.8.2
 portalocker==2.10.1
+pre_commit==4.0.1
 proto-plus==1.24.0
 protobuf==4.25.3
 pyarrow==16.1.0
@@ -118,6 +135,7 @@ pyarrow-hotfix==0.6
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
+pyct==0.5.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 pydot==1.4.2
@@ -125,11 +143,14 @@ Pygments==2.18.0
 pymongo==4.10.1
 pynndescent==0.5.12
 pyparsing==3.1.2
+PyQt6-Qt6==6.7.3
+PyQt6_sip==13.8.0
 pytest==8.3.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2024.1
+pyviz_comms==3.0.4
 PyYAML==6.0.1
 redis==5.1.1
 referencing==0.35.1
@@ -145,8 +166,10 @@ sacrebleu==2.4.3
 safetensors==0.4.5
 scikit-learn==1.5.0
 scipy==1.13.1
+seaborn==0.13.2
 shellingham==1.5.4
 six==1.16.0
+snakeviz==2.2.2
 sniffio==1.3.1
 sounddevice==0.4.7
 soundfile==0.12.1
@@ -173,6 +196,7 @@ toolz==1.0.0
 torch==2.4.1
 torchaudio==2.4.1
 torchvision==0.19.1
+tornado==6.4.2
 tqdm==4.66.4
 transformers==4.45.2
 triton==3.0.0
@@ -180,14 +204,19 @@ typeguard==2.13.3
 typer==0.12.4
 typing_extensions==4.12.2
 tzdata==2024.1
+uc-micro-py==1.0.3
 ujson==5.10.0
 umap-learn==0.5.6
 urllib3==2.2.2
 uvicorn==0.23.2
 uvloop==0.20.0
+virtualenv==20.27.1
 watchfiles==0.23.0
+webencodings==0.5.1
 websockets==13.0
 Werkzeug==3.0.3
 wrapt==1.14.1
+xarray==2025.1.1
+xyzservices==2025.1.0
 zipp==3.19.2
 zstandard==0.23.0
