--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@
 
 # PATHS:
 # define paths for your audio data
-audio_dir :       "bacpipe/tests/test_data"
+audio_dir :       'bacpipe/tests/test_data'
 
 #####################    PROCESS SETTINGS    ##############################
 
@@ -28,9 +28,8 @@ dashboard: False
 # embedding model name
 embedding_model: 
   selected_models: [
-      "perch_bird",
-      "biolingual",
       "birdnet",
+      "perch_bird",
   ]
 
   # if already_computed is True, the embeddings will be loaded from the
