--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 absl-py==2.1.0
 annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
+antlr4-python3-runtime
 anyio==4.4.0
 apache-beam==2.60.0
 astunparse==1.6.3
@@ -32,7 +32,6 @@ dnspython==2.6.1
 docopt==0.6.2
 einops==0.8.0
 etils==1.9.4
-fairseq==0.12.2
 fastavro==1.9.7
 fasteners==0.19
 filelock==3.15.4
@@ -55,7 +54,7 @@ httptools==0.6.1
 httpx==0.27.0
 huggingface-hub==0.25.1
 humanize==4.11.0
-hydra-core==1.3.1
+hydra-core==1.3
 identify==2.6.2
 idna==3.7
 importlib_metadata==7.1.0
@@ -110,7 +109,7 @@ nvidia-nvjitlink-cu12==12.5.82
 nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
 objsize==0.7.0
-omegaconf==2.3.0
+omegaconf
 opt-einsum==3.3.0
 optax==0.2.3
 optree==0.11.0
