disable clustering and classification by default and raise error if no annotations for classification

--- a/config.yaml
+++ b/config.yaml
@@ -54,8 +54,8 @@ dim_reduction_model: "umap"
 #########################################################################
 
 evaluation_task: [
-  "clustering",
-  "classification"
+  # "clustering",
+  # "classification"
 ]
 
 
