--- a/bacpipe/settings.yaml
+++ b/bacpipe/settings.yaml
@@ -23,6 +23,12 @@ audio_suffixes: ['.wav', '.WAV', '.aif', '.mp3', '.MP3', '.flac', '.ogg']
 # Set to False if you want to keep embeddings even if the process is interrupted.
 rm_embedding_on_keyboard_interrupt: True
 
+# When audio get's imported and windowed, the last frame might
+# end up not being long enough to fit a full context window, as a 
+# result the frame get's padded. Specify how it should get padded.
+# Choose values from the np.pad function documentation
+# (https://numpy.org/devdocs/reference/generated/numpy.pad.html).
+padding: 'wrap'
 
 ######################################################
 ###############   EVALUATION SETTINGS ################
