--- a/requirements.txt
+++ b/requirements.txt
@@ -1,221 +1,176 @@
-absl-py==2.1.0
-annotated-types==0.7.0
-antlr4-python3-runtime
-anyio==4.4.0
+absl-py==2.3.1
+anyio==4.10.0
 apache-beam==2.60.0
 astunparse==1.6.3
-attrs==24.2.0
+attrs==25.3.0
 audioread==3.0.1
-bitarray==2.9.2
-black==24.10.0
 bleach==6.2.0
-blinker==1.8.2
-bokeh==3.6.3
-cachetools==5.3.3
-certifi==2024.6.2
-cffi==1.16.0
-cfgv==3.4.0
-charset-normalizer==3.3.2
-chex==0.1.87
-click==8.1.7
+bokeh==3.7.3
+cachetools==5.5.2
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
+chex==0.1.90
+click==8.2.1
 cloudpickle==2.2.1
-colorama==0.4.6
 contextlib2==21.6.0
-contourpy==1.2.1
+contourpy==1.3.3
 crcmod==1.7
 cycler==0.12.1
-Cython==3.0.11
-decorator==5.1.1
+decorator==5.2.1
 dill==0.3.1.1
-distlib==0.3.9
-dnspython==2.6.1
+dnspython==2.7.0
 docopt==0.6.2
 einops==0.8.0
-etils==1.9.4
-fastavro==1.9.7
-fasteners==0.19
-filelock==3.15.4
-flatbuffers==24.3.25
+etils==1.13.0
+fastavro==1.12.0
+fasteners==0.20
+filelock==3.19.1
+flatbuffers==25.2.10
 flax==0.10.0
-fonttools==4.53.0
-fsspec==2024.6.1
-gast==0.5.4
-google-auth==2.30.0
-google-auth-oauthlib==1.0.0
+fonttools==4.59.2
+fsspec==2025.9.0
+gast==0.6.0
+google-auth==2.40.3
+google-auth-oauthlib==1.2.2
 google-pasta==0.2.0
-grpcio==1.64.1
-h11==0.14.0
-h5py==3.11.0
+grpcio==1.65.5
+h11==0.16.0
+h5py==3.14.0
 hdfs==2.7.3
 hear21passt==0.0.26
-httpcore==1.0.5
+hf-xet==1.1.9
+httpcore==1.0.9
 httplib2==0.22.0
-httptools==0.6.1
 httpx==0.27.0
-huggingface-hub==0.25.1
-humanize==4.11.0
-hydra-core==1.3
-identify==2.6.2
-idna==3.7
-importlib_metadata==7.1.0
-importlib_resources==6.4.5
-iniconfig==2.0.0
-itsdangerous==2.2.0
+huggingface-hub==0.34.4
+humanize==4.13.0
+idna==3.10
+importlib_resources==6.5.2
+iniconfig==2.1.0
 jax==0.4.33
 jaxlib==0.4.33
-Jinja2==3.1.4
-joblib==1.4.2
+Jinja2==3.1.6
+joblib==1.5.2
 jsonpickle==3.3.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.4.1
 keras==2.15.0
-kiwisolver==1.4.5
+kiwisolver==1.4.9
 lazy_loader==0.4
 libclang==18.1.1
 librosa==0.10.2.post1
 linkify-it-py==2.0.3
-llvmlite==0.43.0
-locket==1.0.0
-lxml==5.3.0
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.0
-mdit-py-plugins==0.4.2
+llvmlite==0.44.0
+Markdown==3.9
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.6
+mdit-py-plugins==0.5.0
 mdurl==0.1.2
+ml-collections==0.1.0
 ml-dtypes==0.3.2
-ml_collections==0.1.1
 mpmath==1.3.0
-msgpack==1.0.8
-multipledispatch==1.0.0
-mypy-extensions==1.0.0
-namex==0.0.8
+msgpack==1.1.1
+narwhals==2.3.0
 nest-asyncio==1.6.0
-networkx==3.3
-nodeenv==1.9.1
-numba==0.60.0
+networkx==3.5
+numba==0.61.2
 numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
 nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.5.82
-nvidia-nvtx-cu12==12.1.105
-oauthlib==3.2.2
-objsize==0.7.0
-omegaconf
-opt-einsum==3.3.0
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+oauthlib==3.3.1
+objsize==0.7.1
+opt_einsum==3.4.0
 optax==0.2.3
-optree==0.11.0
 orbax-checkpoint==0.6.4
 orjson==3.10.7
-packaging==24.1
+packaging==25.0
 pandas==2.2.3
 panel==1.6.2
-param==2.2.0
-partd==1.4.2
-pathspec==0.12.1
-pillow==10.3.0
-platformdirs==4.2.2
-pluggy==1.5.0
+param==2.2.1
+pillow==11.3.0
+platformdirs==4.4.0
+pluggy==1.6.0
 pooch==1.8.2
-portalocker==2.10.1
-pre_commit==4.0.1
-proto-plus==1.24.0
-protobuf==4.25.3
+proto-plus==1.26.1
+protobuf==4.25.8
 pyarrow==16.1.0
-pyarrow-hotfix==0.6
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
+pyarrow-hotfix==0.7
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.22
-pyct==0.5.0
-pydantic==2.8.2
-pydantic_core==2.20.1
 pydot==1.4.2
-Pygments==2.18.0
-pymongo==4.10.1
-pynndescent==0.5.12
-pyparsing==3.1.2
-PyQt6-Qt6==6.7.3
-PyQt6_sip==13.8.0
-pytest==8.3.3
+Pygments==2.19.2
+PyJWT==2.10.1
+pymongo==4.14.1
+pynndescent==0.5.13
+pyparsing==3.2.3
+pytest==8.4.2
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-multipart==0.0.9
-pytz==2024.1
-pyviz_comms==3.0.4
-PyYAML==6.0.1
-redis==5.1.1
-referencing==0.35.1
-regex==2024.9.11
+pytz==2025.2
+pyviz_comms==3.0.6
+PyYAML==6.0.2
+redis==5.3.1
+referencing==0.36.2
+regex==2025.9.1
 requests==2.32.3
 requests-oauthlib==2.0.0
-resampy==0.4.3
-retrying==1.3.4
-rich==13.7.1
-rpds-py==0.20.0
-rsa==4.9
-sacrebleu==2.4.3
+rich==14.1.0
+rpds-py==0.27.1
+rsa==4.9.1
 safetensors==0.4.5
-scikit-learn==1.5.0
+scikit-learn==1.7.1
 scipy==1.13.1
 seaborn==0.13.2
-shellingham==1.5.4
-six==1.16.0
-snakeviz==2.2.2
+setuptools==80.9.0
+six==1.17.0
 sniffio==1.3.1
 sounddevice==0.4.7
 soundfile==0.12.1
 soxr==0.3.7
-starlette==0.37.2
-sympy==1.12.1
-tabulate==0.9.0
-tenacity==8.4.1
+sympy==1.13.1
 tensorboard==2.15.2
 tensorboard-data-server==0.7.2
 tensorflow==2.15.1
-tensorflow-addons==0.23.0
 tensorflow-estimator==2.15.0
-tensorflow-hub==0.16.1
-tensorflow-io-gcs-filesystem==0.37.0
-tensorstore==0.1.66
-termcolor==2.4.0
-tf-keras==2.14.1
-tf-slim==1.1.0
-threadpoolctl==3.5.0
+tensorflow-hub==0.16.0
+tensorflow-io-gcs-filesystem==0.37.1
+tensorstore==0.1.74
+termcolor==3.1.0
+threadpoolctl==3.6.0
 timm==1.0.11
-tokenizers==0.20.1
+tokenizers==0.22.0
 toolz==1.0.0
-torch==2.4.1
-torchaudio==2.4.1
-torchvision==0.19.1
-tornado==6.4.2
-tqdm==4.66.4
-transformers==4.45.2
-triton==3.0.0
-typeguard==2.13.3
-typer==0.12.4
-typing_extensions==4.12.2
-tzdata==2024.1
+torch==2.6.0
+torchaudio==2.6.0
+torchvision==0.21.0
+tornado==6.5.2
+tqdm==4.67.1
+transformers==4.56.0
+triton==3.2.0
+typing_extensions==4.15.0
+tzdata==2025.2
 uc-micro-py==1.0.3
-ujson==5.10.0
-umap-learn==0.5.6
-urllib3==2.2.2
+umap-learn==0.5.9.post2
+urllib3==2.5.0
 uvicorn==0.23.2
 uvloop==0.20.0
-virtualenv==20.27.1
-watchfiles==0.23.0
 webencodings==0.5.1
-websockets==13.0
-Werkzeug==3.0.3
-wrapt==1.14.1
-xarray==2025.1.1
-xyzservices==2025.1.0
-zipp==3.19.2
-zstandard==0.23.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.14.2
+xyzservices==2025.4.0
+zipp==3.23.0
+zstandard==0.24.0
